# Noten

./: .gitignore  AGENTS.md  LICENSE  README.md  UPDATE.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bootstrapper/: Cargo.toml  build.rs
bootstrapper/src/: constants.rs  installer.rs  main.rs  registry.rs  splash.rs
docs/: app-review-2026-07.md  architecture.md  noten-v0.3.0.md
maintenance-helper/: Cargo.toml  build.rs
maintenance-helper/src/: cleanup.rs  constants.rs  main.rs  registry.rs  splash.rs  uninstaller.rs
noten-splash-ui/: Cargo.toml
scripts/: build-release.ps1  sync-version.mjs
src/: App.css  App.styles.ts  App.tsx  i18n.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppMenu.tsx  EditorToolbar.tsx  GoToLineBar.tsx  MarkdownEditor.tsx  NoteColorPicker.tsx  OutlinePanel.test.tsx  OutlinePanel.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.keyboard.test.tsx  Sidebar.styles.ts  Sidebar.tsx  SidebarContextMenus.tsx  SlashCommand.tsx  StatusBar.tsx  TableBubbleMenu.tsx  TiptapEditor.tsx  TitleBar.tsx
src/extensions/: AnchorLink.test.ts  AnchorLink.ts  EscapeFirstBlock.test.ts  EscapeFirstBlock.ts  FocusMode.test.ts  FocusMode.ts  ImageDrop.ts  ImageReorder.ts  ImageView.test.ts  ImageView.ts  MermaidCodeBlock.ts  SearchHighlight.test.ts  SearchHighlight.ts  SlashCommands.test.ts  SlashCommands.ts  TextContextMenu.test.ts  TextContextMenu.ts  WikiLink.test.ts  WikiLink.ts  WikiLinkSuggestion.ts  fastMarkdownLexer.test.ts  fastMarkdownLexer.ts  isProbablyMarkdown.scenarios.test.ts  isProbablyMarkdown.test.ts  isProbablyMarkdown.ts  markdownRoundTrip.fixtures.test.ts  mermaidExport.ts  mermaidSourceMetadata.test.ts  mermaidSourceMetadata.ts
src/hooks/: ownWriteTracker.test.ts  ownWriteTracker.ts  useAutoSave.test.ts  useAutoSave.ts  useChromeVisibility.ts  useDragDrop.ts  useFileSystem.test.ts  useFileSystem.ts  useFileWatcher.test.ts  useFileWatcher.ts  useFocusOutlineSync.test.ts  useFocusOutlineSync.ts  useHoverDismissTimer.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMarkdownState.ts  useMigrationSync.test.ts  useMigrationSync.ts  useNoteGroups.ts  useNotesLoader.test.ts  useNotesLoader.ts  usePopoverAnchor.ts  (+8 more)
(+85 files in other folders)
