[package]
name = "maintenance-helper"
version = "0.1.2"
edition = "2021"

[dependencies]
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Registry",
] }

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "maintenance-helper"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
