[package]
name = "maintenance-helper"
version = "0.1.5"
edition = "2021"

[dependencies]
noten-splash-ui = { path = "../noten-splash-ui" }
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "maintenance-helper"
path = "src/main.rs"
